--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typography-theme-wordpress-2016": "^0.15.10"
   },
   "devDependencies": {
+    "babel-eslint": "^8.2.2",
     "eslint": "^4.18.2",
     "eslint-plugin-react": "^7.7.0",
     "gh-pages": "^1.1.0",
